fixed drawing jumping when scrolled

--- a/Lab3/subpages/design.css
+++ b/Lab3/subpages/design.css
@@ -68,7 +68,7 @@ footer, article, begining, li a, h1
 {
     position: absolute;
     left: 20;
-    top: 100;
+    top: 102;
     display: none;
     padding-left: 0;
     padding-right: 0;
